avanzamento login with proxy fixed layout

--- a/uimodule/webapp/index.html
+++ b/uimodule/webapp/index.html
@@ -17,7 +17,7 @@
         }
     </style>
     <script id="sap-ui-bootstrap" src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-        data-sap-ui-theme="sap_fiori_3" data-sap-ui-resourceroots='{
+        data-sap-ui-theme="sap_fiori_3_dark" data-sap-ui-resourceroots='{
             "com.myorg.myUI5App": "./"
         }' data-sap-ui-oninit="module:sap/ui/core/ComponentSupport" data-sap-ui-compatVersion="edge"
         data-sap-ui-async="true" data-sap-ui-frameOptions="trusted"></script>
