--- a/uimodule/webapp/index.html
+++ b/uimodule/webapp/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" href="icon/favicon.ico" />
+    <link rel="shortcut icon" href="./public/img/favicon.ico" />
     <title>Sir Safety System</title>
     <style>
         html,
